--- a/index.html
+++ b/index.html
@@ -122,11 +122,10 @@ body {
 }
 
 
-
     </style>
     <div class="container">
-        <div class="box box-1" style="--img: url(https://i.postimg.cc/sgBkfbtx/img-1.jpg);" data-text="Narayan"></div>
-        <div class="box box-2" style="--img: url(https://i.postimg.cc/3RZ6bhDS/img-2.jpg);" data-text="Sora"></div>
+        <div class="box box-1" style="background-image: url('/images/IMG20231021140955.jpg');" data-text="Pranit"></div>
+        <div class="box box-1" style="background-image: url('/images/WhatsApp Image 2023-10-22 at 18.19.37_9323137a.jpg');" data-text="Pajjuu"></div>
         
         <div class="box box-3" style="--img: url(https://i.postimg.cc/DZhHg0m4/img-3.jpg
     );" data-text="Kaito"></div>
